feat: Query search API
